--- a/templates/base.html
+++ b/templates/base.html
@@ -175,7 +175,7 @@
                                     <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
                                     <li><a href="{% url "albums" %}">Bildealbum</a></li>
                                     <li><a href="{% url "blog" %}">Blogg</a></li>
-                                    <li><a href="/julekalender/">Julekalender 2019</a></li>
+                                    <li><a href="/julekalender/2019/">Julekalender 2019</a></li>
 {% comment %}
                                     <li><a href="{% url "advent_calendar" "2019" %}">Julekalender 2019</a></li>
 {% endcomment %}
