Removes a santa from hidden santa template, clearing nablaweb of santas

--- a/nablapps/interactive/templates/interactive/santa_hunt.html
+++ b/nablapps/interactive/templates/interactive/santa_hunt.html
@@ -31,10 +31,13 @@
 <!--
 Kopier denne for å lage en nisse.
 Angi id og posisjon på nissen. Posisjon er url-navnet til siden der nissen ligger.
+Det er vikig at disse parametrene samssvarer med et Santa-object som kan oprettes i admin.
 -->
 
-<a href="{% url "register_santa" santa_id="3" redirect_url="hidden_santa" %}">
+<!--
+<a href="{% url "register_santa" santa_id="1" redirect_url="hidden_santa" %}">
     <img alt="NISSEJÆVEL!" src="https://nabla.no/media/uploads/com_pictures/lopelogo.png" width="200">
 </a>
+-->
 
 {% endblock %}
