Adds 3 santas to calendar, nablaforum and base templates

--- a/nablapps/nablaforum/templates/nablaforum/index.html
+++ b/nablapps/nablaforum/templates/nablaforum/index.html
@@ -13,6 +13,11 @@
     det er bare å bruke det for gøy!</h4>
 </div> 
 
+<br> <a href="{% url "register_santa" santa_id="4" redirect_url="forum-index" %}">
+    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nisse_3.jpg" width="150">
+</a> <br>
+
+
 <h1>Nablaforum</h1>
 
 <h4>Velkommen til Nablas interforum! Nedenfor finner du kanalene du med i. Det er kanaler tilhørende dine grupper, felleskanaler, samt kullgruppe og "feeds".</h4>
