Removes santa from base, and adds it to 404 template instead, to avoid issues with base

--- a/templates/404.html
+++ b/templates/404.html
@@ -4,5 +4,13 @@
 <h1>404</h1>
 <p>
     Denne siden eksisterer dessverre ikke. Burde den vært her? Send en mail til webkom æt nabla dått ntnu dått no.
+
+<!-- Santa: -->
+<a href="https://naabla.no/registersanta/4/404">
+    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nissse_7.jpg" width="150">
+    </a> 
+<!-- Santa end -->
+
+
 </p>
 {% endblock %}
