Changes the photo of the nablaforum and calendar santa to a more visible one

--- a/nablapps/events/templates/events/event_list.html
+++ b/nablapps/events/templates/events/event_list.html
@@ -82,8 +82,9 @@
             <p>Melder du deg på et fullbooket arrangement, blir du satt på venteliste.
             Blir det ledige plasser, går de til dem som har ventet lengst.</p>
 
+            <!-- Santa -->
             <a href="{% url "register_santa" santa_id="1" redirect_url="event_list" %}">
-                <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nisse_1.jpg" width="150">
+                <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nissse_7.jpg" width="150">
             </a>
 
         </div>
