--- a/nablapps/nablaforum/templates/nablaforum/index.html
+++ b/nablapps/nablaforum/templates/nablaforum/index.html
@@ -13,8 +13,8 @@
     det er bare å bruke det for gøy!</h4>
 </div> 
 
-<br> <a href="{% url "register_santa" santa_id="4" redirect_url="forum-index" %}">
-    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nisse_3.jpg" width="150">
+<a href="{% url "register_santa" santa_id="4" redirect_url="forum-index" %}">
+    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nissse_7.jpg" width="200">
 </a> <br>
 
 
