Fixes some typos in santa urls. Also adds another one in a location which is not to be disclosed here, to make it a bit harder for cheaters to look for santas in the commit log

--- a/templates/500.html
+++ b/templates/500.html
@@ -3,4 +3,12 @@
     Her har det skjedd noe galt! Ta kontakt med webkom på <a
     href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>, og fortell så detaljert
 som mulig hva du gjorde når dette skjedde.
+
+<!-- Santa: -->
+<a href="https://nabla.no/registersanta/5/500">
+    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nissse_7.jpg" width="150">
+    </a> 
+<!-- Santa end -->
+
+
 </p>
