Small change to advent_door_text_reply.
"Med i trekningen" -> "Brukere som har svart"

--- a/nablapps/interactive/templates/interactive/advent_door_text_reply.html
+++ b/nablapps/interactive/templates/interactive/advent_door_text_reply.html
@@ -58,7 +58,7 @@
     {% endif %}
     
     {% endif %}
-    <h2>Med i trekningen:</h2>
+    <h2>Brukere som har sendt inn svar:</h2>
     <div>
         {% for part in door.participation.all %}
         {% include "accounts/includes/user_small.html" with user=part.user %}
