Update mouse cursor to crosshair
Also move the style from scaleDiv to containerDiv

--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -521,8 +521,8 @@ colorPreviewDiv:hover {
 </style>
 
 <div style="width:100%;display:flex;flex-wrap:wrap;padding:5px;">
-    <div id="containerDiv" style="margin:5px;border-width:3px;border-style:solid;overflow:hidden;background-color:lightgray;width:80vh;height:80vh;transform:translateZ(0);">
-        <div id="scaleDiv" style="cursor:move;height:100%;transform-origin:center;transform: scale(20,20);">
+    <div id="containerDiv" style="cursor:crosshair;margin:5px;border-width:3px;border-style:solid;overflow:hidden;background-color:lightgray;width:80vh;height:80vh;transform:translateZ(0);">
+        <div id="scaleDiv" style="height:100%;transform-origin:center;transform: scale(20,20);">
             <div id="translateDiv">
                 <canvas id="canvas" style="display:block;transform:translateZ(0);" width="{{ grid.width }}px" height="{{ grid.height }}px">Nettleseren din støtter ikke HTML5 canvas</canvas>
             </div>
