Properly implement max zoom-level
The max zoom level is configured to be the level at which the user can
see exactly 4x4 pixels, or ~10x more zoomed in than the minimun,
whichever is larger.

--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -327,11 +327,16 @@
 
     function resizeHandler() {
         contRect = cont.getBoundingClientRect();
-        minXScale = (contRect.width - 2*borderWidth) / {{ grid.width }} * 0.9
-        minYScale = (contRect.height - 2*borderWidth) / {{ grid.height }} * 0.9
+        minXScale = (contRect.width - 2*borderWidth) / {{ grid.width }} * 0.9;
+        minYScale = (contRect.height - 2*borderWidth) / {{ grid.height }} * 0.9;
         minScale = Math.min(minXScale, minYScale);
-        slider.min = Math.log(minScale).toFixed(2);
-        slider.max = parseInt(slider.min) + 4;
+        slider.min = +Math.log(minScale).toFixed(2);
+
+        maxXScale = (contRect.width - 2*borderWidth) / 4;
+        maxYScale = (contRect.height - 2*borderWidth) / 4;
+        maxScale = Math.max(maxXScale, maxYScale);
+        slider.max = Math.max(+Math.log(maxScale).toFixed(2), slider.min+2);
+
         slider.value = Math.max(Math.min(slider.value, slider.max), slider.min);
         updateZoom();
 
