Add /info API-endpoint for basic info about the grid

--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -16,6 +16,7 @@
     // GET Timestamp of your last submit {{ host }}{% url 'submit_place' pk=grid.pk %}
     // GET Updates (parameter last_updated) {{ host }}{% url 'get_place_updates' pk=grid.pk %}
     // GET History {{ host }}{% url 'get_place_history' pk=grid.pk %}
+    // GET Info {{ host }}{% url 'get_place_info' pk=grid.pk %}
     {% endwith %}
     // Please be kind to our API-endpoints :^)
 
