Send precise `last_updated` in payload to /updates
This prevents a bug where the most recent pixel would constantly get
sent, even though the client had already gotten that update.

--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -121,7 +121,7 @@
     }
 
     function checkForUpdates() {
-        $.getJSON("{% url 'get_place_updates' pk=grid.pk %}", {"last_updated": Math.floor(lastUpdate)}, update);
+        $.getJSON("{% url 'get_place_updates' pk=grid.pk %}", {"last_updated": lastUpdate}, update);
     }
 
     function submit(data, onsuccess, onerror) {
