Add callback to catch failed submit attempts

--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -140,9 +140,12 @@
                 displayPixelInfo(selectedX, selectedY);
 
             } else {
-                alert("Beklager, plasseringen feilet");
+                alert("Beklager, plasseringen feilet. Prøv igjen om en liten stund.");
                 submitButton.disabled = false;
             }
+        }).fail(function () {
+                alert("Beklager, plasseringen feilet. Prøv igjen om en liten stund.");
+                submitButton.disabled = false;
         });
 
     }
