--- a/nablapps/exchange/templates/exchange/ex_list.html
+++ b/nablapps/exchange/templates/exchange/ex_list.html
@@ -11,6 +11,12 @@
     </form>
     <p>Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling. Et universitet er krysset under en spesialiseringskolonne dersom minst en fysmatter med gitt spesialisering har studert der (og har registrert dette). Trykk på et universitet for å få opp en liste med studenter som har studert på et gitt universitet. Noen av dem har utvekslingsrapporter fra studenter som har studert der.</p>
 
+    <!-- Begin santa -->
+    <br> <a href="https://nabla.no/registersanta/13/reisenisse">
+    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nisse_10.png" width="250">
+    </a> <br>
+    <!-- End santa -->
+
     <script src="/static/js/tabel.js" defer></script>
     <div style="overflow: auto">
         <table class="tabel table" style="border-collapse:separate;">
@@ -38,4 +44,5 @@
     </div>
 
 </div>
+
 {% endblock content %}
