--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -10,7 +10,7 @@
 
 <meta property="og:title" content="Place" />
 <meta property="og:description" content="Nablas versjon av place" />
-<meta property="og:image" content="{% static "/img/placelogo.png" %}" />
+<meta property="og:image" content="{{ request.get_host }}{% static "/img/placelogo.png" %}" />
 <meta property="og:image:width" content="1220" />
 <meta property="og:image:height" content="190" />
 
