--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -11,6 +11,7 @@
 <meta property="og:title" content="Place" />
 <meta property="og:description" content="Nablas versjon av place" />
 {% with request.get_host as host %}
+<meta property="og:image" content="https://{{ host }}{% static "/img/placelogo.png" %}" />
 <meta property="og:image:url" content="http://{{ host }}{% static "/img/placelogo.png" %}" />
 <meta property="og:image:secure_url" content="https://{{ host }}{% static "/img/placelogo.png" %}" />
 <meta property="og:image:width" content="1400" />
