Rename meta image to circumvent facebook caching

--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -11,9 +11,9 @@
 <meta property="og:title" content="Place" />
 <meta property="og:description" content="Nablas versjon av place" />
 {% with request.get_host as host %}
-<meta property="og:image" content="https://{{ host }}{% static "/img/placelogo.png" %}" />
-<meta property="og:image:url" content="http://{{ host }}{% static "/img/placelogo.png" %}" />
-<meta property="og:image:secure_url" content="https://{{ host }}{% static "/img/placelogo.png" %}" />
+<meta property="og:image" content="https://{{ host }}{% static "/img/placelogo_alt.png" %}" />
+<meta property="og:image:url" content="http://{{ host }}{% static "/img/placelogo_alt.png" %}" />
+<meta property="og:image:secure_url" content="https://{{ host }}{% static "/img/placelogo_alt.png" %}" />
 <meta property="og:image:width" content="1400" />
 <meta property="og:image:height" content="1000" />
 
