--- a/nablapps/meeting_records/templates/meeting_records/meeting_record_list.html
+++ b/nablapps/meeting_records/templates/meeting_records/meeting_record_list.html
@@ -22,6 +22,13 @@
 {% endfor %}
 </table>
 
+<!-- Begin santa -->
+<a href="{% url "register_santa" santa_id="15" redirect_url="referater" %}">
+    <img alt="Se! En nisse!" src="https://nabla.no/media/uploads/content/nisse_1.jpg" width="150">
+</a>
+
+
+
 {% endblock content %}
 
 {% block sidebar %} {% endblock sidebar %}
