--- a/nablapps/events/templates/events/event_main_page.html
+++ b/nablapps/events/templates/events/event_main_page.html
@@ -109,13 +109,14 @@
 
  .day__date {
      position: absolute;
-     right: 0;
-     top: 0;
+     right: 10px;
+     top: -4px;
      max-height: 100%;
      padding: 7px;
      background-color: #c67676;
      color: white;
      font-size: 2em;
+     box-shadow: 0px 4px 7px -2px black;
  }
 
  form.filter input[type="radio"] {
