Fixes that 500 error in the code golf menu (at last)

--- a/nablapps/interactive/templates/interactive/codetask_list.html
+++ b/nablapps/interactive/templates/interactive/codetask_list.html
@@ -29,7 +29,11 @@
 				{% endif %}
 			</td>
 			<td> 
-				{{ userResult }}
+                {% if request.user.is_authenticated %}
+                    {{ userResult }}
+                {% else %}
+                    --
+                {% endif %}
 			</td>
 		</tr>
 	{% endfor %}
