Starts reworking nablaforum Adds new view which will replace the existing ones and with a more slack like styling. Also adds new block to base.html which fills the entire content body.

--- a/nablapps/nablaforum/static/nablaforum/forum.css
+++ b/nablapps/nablaforum/static/nablaforum/forum.css
@@ -1,3 +1,15 @@
+.main-grid{
+    background-color: white;
+    margin-bottom: 500px;
+    padding: 100px 20px 20px 20px;
+
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-gap: 20px;
+    grid-template-areas:
+    "cahnnel-menu channel-threads thread-messages"
+}
+
 .tile{
     border-radius: 10px;
     padding-bottom: 45px;
