Completes most of the planned forum upgrades (for now).
Still need to check for unreads in a sensible way

--- a/templates/base.html
+++ b/templates/base.html
@@ -215,7 +215,7 @@
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{% url "forum-index" %}">Nablaforum</a></li>
+                                    <li><a href="{% url "forum-main" channel_id=1 thread_id=0 %}">Nablaforum</a></li>
                                     <li><a href="{% url "member_profile" user.username %}">Vis profil</a></li>
                                     <li><a href="{% url "edit_profile" %}">Endre profil</a></li>
                                     <li><a href="{% url "password_change" %}">Endre passord</a></li>
