--- a/nablapps/nablaforum/static/nablaforum/forum.css
+++ b/nablapps/nablaforum/static/nablaforum/forum.css
@@ -1,5 +1,5 @@
 .main-grid{
-    background-color: white;
+    background-color: #f0f0f0;
     margin-bottom: 500px;
     padding: 100px 20px 20px 20px;
 
@@ -17,11 +17,15 @@
     padding-left: 20px;
     margin-right: 20px;
     margin-bottom: 10px;
-    background-color: #f0f0f0;
+    background-color: white;
 }
 
 .tile--unread, .meta--unread {
     color: red;
+}
+
+.well {
+    background-color: white;
 }
 
 .tile:hover {
@@ -33,6 +37,10 @@
     margin: 0;
 }   
 
+.content{
+    color: black;
+}
+
 .meta{
     float: right;
     padding-right: 20px;
@@ -43,7 +51,7 @@
     border-style: solid;
     border-color: green;
     border-radius: 10px;
-    background-color: #f5f5f5;
+    background-color: white;
     padding: 20px;
     margin-bottom: 20px;
     width: 1fr;
