--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -13,13 +13,26 @@
     <script src="{% static 'js/infinite.min.js' %}"></script>
 {% endblock more_head %}
 
+<style>
+    .main-grid{
+        height: 950px;
+        margin-bottom: 390px;
+    }
+
+    .grid-item {
+        height: 100%;
+        overflow: auto;
+    }
+</style>
+
 
 <div class="main-grid">
-    <div class="channel-menu">
+    <div class="grid-item channel-menu">
         <h1>Nablaforum</h1>
         <h4>Velkommen til Nablas interforum! Nedenfor finner du kanalene du med i. Det er kanaler tilhørende dine grupper, felleskanaler, samt kullgruppe og "feeds".</h4>
 
-        <a href={% url "browse-channels" %}><button style="font-size: 20px">Finn nye kanaler</button></a>
+        <a href={% url "browse-channels" %}><button>Finn nye kanaler</button></a>
+        <a href="{% url "create-channel" %}"><button>Opprett en ny kanal</button></a>
 
         {# List all channels in the different types of channels #}
 
@@ -36,73 +49,71 @@
 
         <h4> "Feeds" </h4> 
         {% for channel in feeds %}
-            <a href="{% url "channel-index" channel_id=channel.pk %}">
-            {% include "nablaforum/includes/tiles.html" with object=channel %}
+            <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
+            {% include "nablaforum/includes/tiles.html" with object=chan thread_id=1nel %}
             </a>
         {% endfor %}
 
         <h4> Gruppekanaler </h4> 
         {% for channel in group_channels %}
-            <a href="{% url "channel-index" channel_id=channel.pk %}">
+            <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
             {% include "nablaforum/includes/tiles.html" with object=channel %}
             </a>
         {% endfor %}
 
         <h4> Ordinære kanaler </h4> 
         {% for channel in common_channels %}
-            <a href="{% url "channel-index" channel_id=channel.pk %}">
+            <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
             {% include "nablaforum/includes/tiles.html" with object=channel %}
             </a>
         {% endfor %}
 
-
-        <h4>Opprett en ny kanal:</h4>
     </div>
 
 
-    <div class="channel-threads" style="max-height:1000px; overflow: auto">
-        <h1>Tråder i kanalen: {{ chosen_channel }}</h1>
+    <div class="grid-item channel-threads" >
+        <h1>{{ chosen_channel }}</h1>
          
         <p>{{ channel.description }}</p>
-         
-        {% for thread in threads %}
-        <div class="infinite-item">
-            <a href="https://nabla.no">
-            {% include "nablaforum/includes/tiles.html" with object=thread %}
-            </a>
-        </div>
-        {# <a href="{% url "thread-view" channel_id=channel_id thread_id=thread.pk %}"> #}
-        {% endfor %}
 
         {% if is_paginated %}
-         <span class="step-links">
-            {% if threads.has_previous %}
-                <a href="?page={{ threads.previous_page_number }}">Hent nyere</a>
-            {% endif %}
-
             <span class="current">
                 side {{ threads.number }} av {{ threads.paginator.num_pages }}
             </span>
+        {% endif %}
+        <br>
 
-            {% if threads.has_next %}
-                <a href="?page={{ threads.next_page_number }}">Hent eldre</a>
-            {% endif %}
-         </span>
-     {% endif %}
+        {% if threads.has_next %}
+            <a href="?page={{ threads.next_page_number }}">Hent eldre</a>
+        {% endif %}
+         
+        {% for thread in threads reversed %}
+        <div class="infinite-item">
+            <a href="{% url "forum-main" channel_id=chosen_channel_id thread_id=thread.pk %}?page={{ threads.number }}">
+            {% include "nablaforum/includes/tiles.html" with object=thread %}
+            </a>
+        </div>
+        {% endfor %}
+
+        {% if threads.has_previous %}
+            <a href="?page={{ threads.previous_page_number }}">Hent nyere</a>
+        {% endif %}
+
+        
          
         {% if not channel.is_feed %}
         <form method="POST">
             {% csrf_token %}
             <h4>Ny tråd:</h4>
         
-            {{ form.as_p }}
+            {{ thread_form.as_p }}
             <button type="submit">Opprett en ny tråd</button>
         </form>
         {% endif %}
     </div>
 
 
-    <div class="thread-messages">
+    <div class="grid-item thread-messages">
         <style>
              .thread{
                  list-style: none;
@@ -110,25 +121,36 @@
              }
          </style>
          
+         {% if chosen_thread %} 
+         <h1>{{ chosen_thread }}</h1>
          
-         <h1>{{ thread }}</h1>
+         <h4>{{ chosen_thread.threadstarter.get_full_name }} skriver:</h4>
+         <div class="des">
+             {{ chosen_thread.text }}
+             <br>
+             <br>
+             <div style="text-align: right;">{{ chosen_thread.created }}</div>
+         </div>
          
-         <h4>{{ thread.threadstarter.get_full_name }} skriver:</h4>
-         <div class="des">{{ thread.text }}</div>
-         
-         {% for message in thread_messages reversed %}
+         {% for message in messages reversed %}
              <div class="well">
                  <h4>{{ message.user.get_full_name }}</h4>
                  <p>{{ message.message }}</p>
+                 <div style="text-align: right;">{{ message.created }}</div>
              </div>
          {% endfor %}
          
          <h4>Ny medling:</h4>
          <form method="POST">
              {% csrf_token %}
-             {{ form.as_p }}
+             {{ message_form.as_p }}
              <button type="submit">send</button>
          </form>
+         {% else %}
+         <div class="well">
+            <h1>Trykk på en tråd for å lese meldinger</h1>
+         </div>
+         {% endif %}
     </div>
 </div>
 {% endblock full-content-body %}
