Fixes broken link in browse channel template.
Also removes unused "more head" block from forum.html

--- a/nablapps/nablaforum/templates/nablaforum/browse_channels.html
+++ b/nablapps/nablaforum/templates/nablaforum/browse_channels.html
@@ -12,7 +12,7 @@
 <h1>Finn nye kanaler</h1>
 <p>Her kan du se og evt. melde deg inn i kanaler du ikke er medlem i.</p>
 
-<a href={% url "forum-index" %}><button style="font-size: 20px; margin: 10px">Tilbake til din kanaloversikt</button></a>
+<a href={% url "forum-main" channel_id=1 thread_id=0 %}><button style="font-size: 20px; margin: 10px">Tilbake til din forumsiden</button></a>
 
 <form method="POST">
 {% csrf_token %}
