Implements unread check in new main view.
"has_unreads" is still a model attribute set to false, and set to
tro upon unread check and then not saved when set to true.
Hacky solution.

--- a/nablapps/nablaforum/templates/nablaforum/includes/tiles.html
+++ b/nablapps/nablaforum/templates/nablaforum/includes/tiles.html
@@ -14,7 +14,7 @@
     {% endif %}
     <h4 class="meta">
         {% if object.has_unreads %}
-        <span class="meta--unread">Uleste meldinger</span>
+        <span class="meta--unread">Uleste meldinger den siste uken</span>
         {% endif %}
         {% if object.created %}
         <span>{{ object.threadstarter.get_full_name }},</span>
